<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:padding="5dp" > 	 
    
    <TableRow>
       	<TextView android:text="@string/panning"></TextView>
       	<SeekBar android:id="@+id/seekbarChannelPanning" android:max="200" />
    </TableRow>
       
    <TableRow>
       	<TextView android:text="@string/volume"></TextView> 
    	<SeekBar android:id="@+id/seekbarChannelVolume" android:max="100" />
	</TableRow>
       
	<TableRow> 
       	<TextView android:text="@string/set_sample"></TextView> 
    	<Spinner
        	android:id="@+id/spinner_sample"
        	android:layout_width="match_parent"
        	android:layout_height="50dp"
        	android:prompt="@string/samples_prompt" />
    </TableRow>
    
	<TableRow>
	    <Button android:text="@string/clear_steps"
	        	android:id="@+id/clear_steps_button" />
		<Button android:text="@string/remove_Button" 
		    	android:id="@+id/buttonRemove" />
		
	</TableRow>
	
	<TableRow>
	    <Button	android:id="@+id/buttonSolo" />
	    <Button android:text="@string/back_button" 
		    	android:id="@+id/buttonBack" />
	</TableRow>
	
	
	
</TableLayout>
