<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

   	<TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:text="@string/hello_world" />
	
   	<RelativeLayout 
   	    xmlns:android="http://schemas.android.com/apk/res/android"
    	xmlns:tools="http://schemas.android.com/tools"
    	android:layout_width="wrap_content"
        android:layout_height="wrap_content"
   	    android:layout_below="@+id/textView1"
   	    android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
   	    >
	    <Button
	        android:id="@+id/button1"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignParentRight="true"
	        android:text="@string/play_button" />
	    
	    <Button
	        android:id="@+id/buttonAddChannel"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_below="@+id/button1"
	        android:layout_alignParentRight="true"
	        android:text="@string/add_channel_button" />
	    
	    <Button
	        android:id="@+id/buttonAddStep"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_below="@+id/buttonAddChannel"
	        android:layout_alignParentRight="true"
	        android:text="@string/add_step_button" />
	    
	    <Button
	        android:id="@+id/buttonRemoveStep"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_below="@+id/buttonAddStep"
	        android:layout_alignParentRight="true"
	        android:text="@string/remove_step_button" />
    </RelativeLayout>
    
    <!-- RadioButtons showing the active step -->
    
    <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
            	android:id="@+id/ActiveStepsContainer"
            	android:orientation="horizontal"
            	android:layout_width="wrap_content"
            	android:layout_height="wrap_content"
           >
    	</TableLayout>
    <ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/stepScroll"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_below="@+id/bpmrow"
        >
    	<!-- Channels -->
    	<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
            	android:id="@+id/ChannelContainer"
            	android:orientation="horizontal"
            	android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	      	    >
   		</TableLayout>
    </ScrollView>

	<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/bpmrow"
    	android:orientation="horizontal"
    	android:layout_width="wrap_content"
    	android:layout_height="wrap_content">

	<SeekBar
	    android:layout_width="160dp"
	    android:layout_height="wrap_content"
	    android:id="@+id/bpmbar"
	/>
	    
	</LinearLayout>
	
	<LinearLayout
	    xmlns:android="http://schemas.android.com/apk/res/android"
	    android:id="@+id/textrow"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_below="@+id/bpmrow"
	    android:gravity="center|center_horizontal"
	    android:orientation="horizontal" >
	
	<TextView
	    android:id="@+id/bpmtext"
	    android:layout_width="160dp"
	    android:layout_height="wrap_content"
	    android:gravity="center"
	    android:text="@string/bpm" />

	</LinearLayout>

			
</RelativeLayout>
